format the vulnerabilities

--- a/views/hacking-web-vulnerabilities/a10_logging/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a10_logging/reference.ejs
@@ -1,3 +1,5 @@
 <div class="markdown">
-* [https://www.owasp.org/index.php/Top_10-2017_A10-Insufficient_Logging%26Monitoring](https://www.owasp.org/index.php/Top_10-2017_A10-Insufficient_Logging%26Monitoring)
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10-2017_A10-Insufficient_Logging%26Monitoring">https://www.owasp.org/index.php/Top_10-2017_A10-Insufficient_Logging%26Monitoring</a></li>
+    </ul>
 </div>
