--- a/views/hacking-web-vulnerabilities/a1_injection/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a1_injection/reference.ejs
@@ -1,4 +1,6 @@
 <div class='markdown'>
-* https://www.owasp.org/index.php/Top_10_2013-A1-Injection
-* https://www.owasp.org/index.php/Injection_Flaws
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10_2013-A1-Injection">https://www.owasp.org/index.php/Top_10_2013-A1-Injection</a></li>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Injection_Flaws">https://www.owasp.org/index.php/Injection_Flaws</a></li>
+    </ul>
 </div>
