--- a/views/hacking-web-vulnerabilities/a1_injection/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/a1_injection/scenario.ejs
@@ -1,6 +1,6 @@
 <div class='markdown'>
-
-* [SQL Injection: User Search](/app/usersearch)
-* [Command Injection: Network Connectivity Test](/app/ping)
-
+    <ul>
+        <li><a href="/app/usersearch">SQL Injection: User Search </a></li>
+        <li><a href="/app/ping">Command Injection: Network Connectivity Test</a></li>
+    </ul>
 </div>
