--- a/views/hacking-web-vulnerabilities/a3_sensitive_data/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/a3_sensitive_data/scenario.ejs
@@ -1,4 +1,5 @@
 <div class='markdown'>
-* [Admin: List Users](/app/admin/users)
-
+    <ul>
+        <li><a href="/app/admin/users">Admin: List Users</a></li>
+    </ul>
 </div>
