--- a/views/hacking-web-vulnerabilities/a5_broken_access_control/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/a5_broken_access_control/scenario.ejs
@@ -1,5 +1,7 @@
 <div class='markdown'>
-* [Admin API Dashbaord](/app/admin)
-* [Edit User](/app/useredit)
+    <ul>
+        <li><a href="/app/admin">Admin API Dashbaord</a></li>
+        <li><a href="/app/useredit">Edit User</a></li>
+    </ul>
 </div>
 
