--- a/views/hacking-web-vulnerabilities/a7_xss/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/a7_xss/scenario.ejs
@@ -1,7 +1,8 @@
 <div class='markdown'>
-* [Reflected XSS: Search Product](/app/products)
-* [Stored XSS: Add/Edit Product](/app/products)
-
-**Note: Chrome XSS Auditor may block XSS Attacks**
+    <ul>
+        <li><a href="/app/products">Reflected XSS: Search Product</a></li>
+        <li><a href="/app/products">Stored XSS: Add/Edit Product</a></li>
+    </ul>
+    <p><b>Note:</b> Chrome XSS Auditor may block XSS Attacks<b></b></p>
 </div>
 
