--- a/views/hacking-web-vulnerabilities/a8_ides/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/a8_ides/scenario.ejs
@@ -1,4 +1,6 @@
 <div class='markdown'>
-* [Insecure Deserialization: Legacy Import Products](/app/bulkproducts?legacy=true)
+    <ul>
+        <li><a href="/app/bulkproducts?legacy=true">Insecure Deserialization: Legacy Import Products</a></li>
+    </ul>
 </div>
 
