--- a/views/hacking-web-vulnerabilities/a9_vuln_component/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/a9_vuln_component/scenario.ejs
@@ -1,4 +1,6 @@
 <div class='markdown'>
-* [Calculator](/app/calc)
+    <ul>
+        <li><a  href="/app/calc">Calculator</a></li>
+    </ul>
 </div>
 
