--- a/views/hacking-web-vulnerabilities/ax_csrf/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/ax_csrf/scenario.ejs
@@ -1,5 +1,7 @@
 <div class='markdown'>
-* [CSRF: Add/Edit Product](/app/modifyproduct)
-* [CSRF: Edit User](/app/useredit)
+    <ul>
+        <li><a href="/app/modifyproduct">CSRF: Add/Edit Product</a></li>
+        <li><a href="/app/useredit">CSRF: Edit User</a></li>
+    </ul>
 </div>
 
