--- a/views/hacking-web-vulnerabilities/ax_redirect/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/ax_redirect/scenario.ejs
@@ -1,6 +1,7 @@
 <div class='markdown'>
-* [Redirect URL](/app/redirect?url=)
-
-The app redirects the user to any URL including external without validation.
+    <ul>
+        <li><a href="/app/redirect?url=">Redirect URL</a></li>
+    </ul>
+    <p>The app redirects the user to any URL including external without validation.</p>
 </div>
 
