--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -117,6 +117,14 @@ a {
     float: left;
 }
 
+.code {
+    background: #545b6c;
+    color: #fafafa;
+    padding: 10px;
+    border-radius: 5px;
+    margin-left: 20px;
+}
+
 @media only screen and (max-width: 992px) {
     .blog {
         font-size: 40px;
