--- a/views/app/modifyproduct.ejs
+++ b/views/app/modifyproduct.ejs
@@ -4,7 +4,7 @@
     <% include ../common/head %>
 </head>
 <body>
-    <% include ../common/navigation %>
+    <% include ../common/header %>
     <div class='container' style='min-height: 450px'><div class='row'><div class='col-md-12'>
 
     <h2>
