--- a/views/hacking-web-vulnerabilities/a2_broken_auth/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a2_broken_auth/reference.ejs
@@ -1,3 +1,5 @@
 <div class="markdown">
-* [https://www.owasp.org/index.php/Top\_10\_2013-A2-Broken\_Authentication\_and\_Session\_Management](https://www.owasp.org/index.php/Top_10_2013-A2-Broken_Authentication_and_Session_Management)
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10_2013-A2-Broken_Authentication_and_Session_Management">https://www.owasp.org/index.php/Top\_10\_2013-A2-Broken\_Authentication\_and\_Session\_Management</a></li>
+    </ul>
 </div>
