--- a/views/hacking-web-vulnerabilities/a2_broken_auth/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/a2_broken_auth/scenario.ejs
@@ -1,6 +1,7 @@
 <div class='markdown'>
-* [Forgot Password](/forgotpw)
-* [Sample reset link](/resetpw?login=user&token=ee11cbb19052e40b07aac0ca060c23ee)
-
+    <ul>
+        <li><a href="/forgotpw">Forgot Password</a></li>
+        <li><a href="/resetpw?login=user&token=ee11cbb19052e40b07aac0ca060c23ee">Sample reset link</a></li>
+    </ul>
 </div>
 
