--- a/views/hacking-web-vulnerabilities/a3_sensitive_data/description.ejs
+++ b/views/hacking-web-vulnerabilities/a3_sensitive_data/description.ejs
@@ -1,3 +1,3 @@
 <div class="markdown">
-Sensitive Data exposure occurs when sensitive data such as passwords, tokens, etc. is present or leaked to where it isn't intended to be.
+<p>Sensitive Data exposure occurs when sensitive data such as passwords, tokens, etc. is present or leaked to where it isn't intended to be.</p>
 </div>
