--- a/views/hacking-web-vulnerabilities/a3_sensitive_data/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a3_sensitive_data/reference.ejs
@@ -1,3 +1,5 @@
 <div class="markdown">
-* [https://www.owasp.org/index.php/Top\_10\_2013-A6-Sensitive\_Data\_Exposure](https://www.owasp.org/index.php/Top_10_2013-A6-Sensitive_Data_Exposure)
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10_2013-A6-Sensitive_Data_Exposure">https://www.owasp.org/index.php/Top\_10\_2013-A6-Sensitive\_Data\_Exposure</a></li>
+    </ul>
 </div>
