--- a/views/hacking-web-vulnerabilities/a4_xxe/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a4_xxe/reference.ejs
@@ -1,3 +1,5 @@
 <div class="markdown">
-* [https://www.owasp.org/index.php/Top_10-2017_A4-XML_External_Entities_(XXE)](https://www.owasp.org/index.php/Top_10-2017_A4-XML_External_Entities_(XXE))
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10-2017_A4-XML_External_Entities_(XXE)">https://www.owasp.org/index.php/Top_10-2017_A4-XML_External_Entities_(XXE)</a></li>
+    </ul>
 </div>
