--- a/views/hacking-web-vulnerabilities/a4_xxe/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/a4_xxe/scenario.ejs
@@ -1,3 +1,5 @@
 <div class='markdown'>
-* [XXE: Import Products](/app/bulkproducts)
+    <ul>
+        <li><a href="/app/bulkproducts">XXE: Import Products</a></li>
+    </ul>
 </div>
