--- a/views/hacking-web-vulnerabilities/a5_broken_access_control/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a5_broken_access_control/reference.ejs
@@ -1,3 +1,5 @@
 <div class="markdown">
-* [https://www.owasp.org/index.php/Top\_10\_2013-A7-Missing\_Function\_Level\_Access\_Control](https://www.owasp.org/index.php/Top_10_2013-A7-Missing_Function_Level_Access_Control)
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10_2013-A7-Missing_Function_Level_Access_Control">https://www.owasp.org/index.php/Top\_10\_2013-A7-Missing\_Function\_Level\_Access\_Control</a></li>
+    </ul>
 </div>
