--- a/views/hacking-web-vulnerabilities/a6_sec_misconf/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a6_sec_misconf/reference.ejs
@@ -1,3 +1,5 @@
 <div class="markdown">
-* [https://www.owasp.org/index.php/Top\_10\_2013-A5-Security\_Misconfiguration](https://www.owasp.org/index.php/Top_10_2013-A5-Security_Misconfiguration)
+    <ul>
+        <li><a href="https://www.owasp.org/index.php/Top_10_2013-A5-Security_Misconfiguration">https://www.owasp.org/index.php/Top\_10\_2013-A5-Security\_Misconfiguration</a></li>
+    </ul>
 </div>
