--- a/views/hacking-web-vulnerabilities/a6_sec_misconf/scenario.ejs
+++ b/views/hacking-web-vulnerabilities/a6_sec_misconf/scenario.ejs
@@ -1,5 +1,6 @@
 <div class='markdown'>
-* [Security Misconfiguration: Calculator](/app/calc)
-
+    <ul>
+        <li><a href="/app/calc">Security Misconfiguration: Calculator</a></li>
+    </ul>
 </div>
 
