--- a/views/hacking-web-vulnerabilities/a7_xss/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a7_xss/reference.ejs
@@ -1,4 +1,6 @@
 <div class='markdown'>
-* https://www.owasp.org/index.php/Cross-site\_Scripting\_(XSS)
-* https://www.owasp.org/index.php/OWASP\_Testing\_Guide_v4\_Table\_of\_Contents
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10-2017_A7-Cross-Site_Scripting_(XSS)">https://www.owasp.org/index.php/Top_10-2017_A7-Cross-Site_Scripting_(XSS)</a></li>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Category:OWASP_Top_Ten_2017_Project">https://www.owasp.org/index.php/Category:OWASP_Top_Ten_2017_Project</a></li>
+    </ul>
 </div>
