--- a/views/hacking-web-vulnerabilities/a8_ides/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a8_ides/reference.ejs
@@ -1,3 +1,5 @@
 <div class="markdown">
-* [https://www.owasp.org/index.php/Top_10-2017_A8-Insecure_Deserialization](https://www.owasp.org/index.php/Top_10-2017_A8-Insecure_Deserialization)
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10-2017_A8-Insecure_Deserialization">https://www.owasp.org/index.php/Top_10-2017_A8-Insecure_Deserialization</a></li>
+    </ul>
 </div>
