--- a/views/hacking-web-vulnerabilities/a9_vuln_component/reference.ejs
+++ b/views/hacking-web-vulnerabilities/a9_vuln_component/reference.ejs
@@ -1,4 +1,6 @@
 <div class="markdown">
-* [Exploit](https://capacitorset.github.io/mathjs/)
-* [https://www.owasp.org/index.php/Top\_10\_2013-A9-Using\_Components\_with\_Known\_Vulnerabilities](https://www.owasp.org/index.php/Top_10_2013-A9-Using_Components_with_Known_Vulnerabilities)
+    <ul>
+        <li><a target="_blank" href="https://capacitorset.github.io/mathjs/">Exploit</a></li>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10_2013-A9-Using_Components_with_Known_Vulnerabilities">https://www.owasp.org/index.php/Top\_10\_2013-A9-Using\_Components\_with\_Known\_Vulnerabilities</a></li>
+    </ul>
 </div>
