--- a/views/hacking-web-vulnerabilities/ax_csrf/description.ejs
+++ b/views/hacking-web-vulnerabilities/ax_csrf/description.ejs
@@ -1,3 +1,3 @@
 <div class="markdown">
-Cross-Site Request Forgery (CSRF) is a vulnerability that may lead to the end user executing unintended actions on a web application in which they're currently authenticated to.
+    <p>Cross-Site Request Forgery (CSRF) is a vulnerability that may lead to the end user executing unintended actions on a web application in which they're currently authenticated to.</p>
 </div>
