--- a/views/hacking-web-vulnerabilities/ax_csrf/reference.ejs
+++ b/views/hacking-web-vulnerabilities/ax_csrf/reference.ejs
@@ -1,3 +1,5 @@
 <div class="markdown">
-* [https://www.owasp.org/index.php/Top\_10\_2013-A8-Cross-Site\_Request\_Forgery\_\(CSRF\)](https://www.owasp.org/index.php/Top_10_2013-A8-Cross-Site_Request_Forgery_\(CSRF\))
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10_2013-A8-Cross-Site_Request_Forgery_(CSRF)">https://www.owasp.org/index.php/Top_10_2013-A8-Cross-Site_Request_Forgery_(CSRF)</a></li>
+    </ul>
 </div>
