--- a/views/hacking-web-vulnerabilities/ax_redirect/reference.ejs
+++ b/views/hacking-web-vulnerabilities/ax_redirect/reference.ejs
@@ -1,3 +1,5 @@
 <div class="markdown">
-* [https://www.owasp.org/index.php/Top\_10\_2013-A10-Unvalidated\_Redirects\_and\_Forwards](https://www.owasp.org/index.php/Top_10_2013-A10-Unvalidated_Redirects_and_Forwards)
+    <ul>
+        <li><a target="_blank" href="https://www.owasp.org/index.php/Top_10_2013-A10-Unvalidated_Redirects_and_Forwards">https://www.owasp.org/index.php/Top\_10\_2013-A10-Unvalidated\_Redirects\_and\_Forwards</a></li>
+    </ul>
 </div>
