name to Attack Your Web

--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -20,8 +20,8 @@
                 <% } else if (messages.info) {%> 
                     <div class="alert alert-info"><%= messages.info %></div>
                 <% } %>                
-                <h3>Welcome to <strong>Catch The Flags</strong></h3>
-                <p><i>Catch The Flags</i> implements a set of intentionally vulnerable functions in NodeJS for learning purpose.
+                <h3>Welcome to <strong>Attack Your Web</strong></h3>
+                <p><i>Attack Your Web</i> implements a set of intentionally vulnerable functions in NodeJS for learning purpose.
                 Start by selecting which of the following subjects you want to practise:</p>
                 <br />
                 <br />
