--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -1,4 +1,4 @@
-<title>Catch The Flags - NodeJS</title>
+<title>Attack Your Web</title>
 <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
