--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand logo" style="color: coral;" href="/"><i class='fa fa-flag'></i> Catch The Flags</a>
+      <a class="navbar-brand logo" style="color: coral;" href="/">Attack Your Web</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       
