adds ctf section, and change app name for Attack My Web

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -39,6 +39,9 @@ a {
 .blog:hover {
     color: #fafafa;
 }
+a {
+    text-decoration: none!important;
+}
 .borderRight {
     border-right: 1px solid #545b6c;
 }
