--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand logo" style="color: coral;" href="/">Attack Your Web</a>
+      <a class="navbar-brand logo" style="color: coral;" href="/">Attack My Web</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       
@@ -22,7 +22,17 @@
                     Hacking Web
                 </a>
             <% } %>
-
+          </li>
+          <li class="borderLeft">
+            <% if(type && type === 'ctf'){ %>
+                <a style="color:white" href='/learn/ctf/info'>
+                    CTF
+                </a>
+            <% } else{%>
+                <a href='/learn/ctf/info'>
+                    CTF
+                </a>
+            <% } %>
           </li>
           <li class="borderLeft borderRight">
             <% if(type && type === 'crypto'){ %>
