--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -20,18 +20,21 @@
                 <% } else if (messages.info) {%> 
                     <div class="alert alert-info"><%= messages.info %></div>
                 <% } %>                
-                <h3>Welcome to <strong>Attack Your Web</strong></h3>
-                <p><i>Attack Your Web</i> implements a set of intentionally vulnerable functions in NodeJS for learning purpose.
+                <h3>Welcome to <strong>Attack My Web</strong></h3>
+                <p><i>Attack My Web</i> implements a set of intentionally vulnerable functions in NodeJS for learning purpose.
                 Start by selecting which of the following subjects you want to practise:</p>
                 <br />
                 <br />
 
-                <div class='col-md-6'>
-                    <a class="blog" href='/learn/hacking-web/vulnerability/info'>HACKING WEB</a>
+                <div class='col-md-6' style="text-align: center;">
+                    <a href='/learn/hacking-web/vulnerability/info'><div class="blog">HACKING WEB</div></a>
                 </div>
-                <div class='col-md-6'>
+                <div class='col-md-6' style="text-align: center;">
+                    <a href='/learn/ctf/info'><div class="blog">CTF</div></a>
+                </div>
+                <!-- <div class='col-md-6'>
                     <a class="blog" href='/learn/cryptography/vulnerability/info'>CRYPTOGRAPHY</a>
-                </div>
+                </div> -->
             </div>
         </div>
 
