--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
         <div class='row'>
             <div class='col-md-6 col-md-offset-3'>
                 <div class='page-header loginTitle'>
-                    <h2>Attack Your Web</h2>
+                    <h2>Attack My Web</h2>
                 </div>
 				<% if (messages.success) { %>
 					<div class="alert alert-success"><%=messages.success%></div>
