--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -3,8 +3,8 @@
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<link rel="icon" type="image/vnd.microsoft.icon" href="/assets/img/favicon.ico">
-
+<!-- <link rel="icon" type="image/vnd.microsoft.icon" href="/assets/img/favicon.ico"> -->
+<link rel="icon" type="image/png" href="/assets/img/favicon.png"> 
 <script src='/assets/js/jquery-3.2.1.min.js'></script>
 <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/assets/js/bootstrapValidator.js"></script>
