--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -29,12 +29,12 @@
                 <div class='col-md-6' style="text-align: center;">
                     <a href='/learn/hacking-web/vulnerability/info'><div class="blog">HACKING WEB</div></a>
                 </div>
-                <div class='col-md-6' style="text-align: center;">
+                <!-- <div class='col-md-6' style="text-align: center;">
                     <a href='/learn/ctf/info'><div class="blog">CTF</div></a>
-                </div>
-                <!-- <div class='col-md-6'>
-                    <a class="blog" href='/learn/cryptography/vulnerability/info'>CRYPTOGRAPHY</a>
                 </div> -->
+                <div class='col-md-6' style="text-align: center;">
+                    <a href='/learn/cryptography/vulnerability/info'><div class="blog">CRYPTOGRAPHY</div></a>
+                </div>
             </div>
         </div>
 
