--- a/views/ctf/layout.ejs
+++ b/views/ctf/layout.ejs
@@ -3,23 +3,30 @@
 <head>
     <% include ../common/head %>
 </head>
-<body> 
+<body>
+    <% needSidebar = (path === '/learn/ctf/home' || path === '/learn/ctf/create-new-document' || path === '/learn/ctf/sign-document') %>
     <% include ../common/header %>
-<div class='container' style='min-height: 450px;margin-left: 0px; padding-left: 0px;'><div class='row'><div class='col-md-12'>
-
-    <div class='row'>
-        <% include sidebar %>
-        <div class='col-md-9' style='padding: 40px'>
-            <%if (vuln_title) {%>
-                <h3><%=vuln_title%></h3>
-                <br />
-                <%- include(vuln_description) %>
-            <% } else {%>
-                <%- include info/description %>
-            <% }%>
+    <div class='container' style='min-height: 450px;margin-left: 0px; padding-left: 0px;'>
+        <div class='row'>
+            <div class='col-md-12'>
+                <div class='row'>
+                    <% if(needSidebar){ %>
+                        <% include sidebar %>
+                        <div class='col-md-9' style='padding: 40px'>
+                            <h3><%=vuln_title%></h3>
+                            <br />
+                            <%- include(vuln_description) %>
+                        </div>
+                    <% } else {%> 
+                        <div class='col-md-12' style='padding: 40px'>
+                            <h3><%=vuln_title%></h3>
+                            <br />
+                            <%- include(vuln_description) %>
+                        </div>
+                    <% }%> 
+                </div>
+            </div>
         </div>
     </div>
-
-</div></div></div>
 </body>
 </html>
