--- a/views/common/attackHeader.ejs
+++ b/views/common/attackHeader.ejs
@@ -1,44 +1,44 @@
 <li class="borderLeft">
     <% if(needSidebar){ %>
         <a style="color:white" href='/learn/ctf/home'>
-            Dashboard
+            <i class="fa fa-dashboard"></i> Dashboard 
         </a>
     <% } else{%>
         <a href='/learn/ctf/home'>
-            Dashboard
+            <i class="fa fa-dashboard"></i> Dashboard
         </a>
     <% } %>
 </li>
 <li class="borderLeft">
     <% if(path === '/learn/ctf/shop'){ %>
         <a style="color:white" href='/learn/ctf/shop'>
-            Shopping Cart
+            <i class="fa fa-shopping-cart"></i> Shopping Cart
         </a>
     <% } else{%>
         <a href='/learn/ctf/shop'>
-            Shopping Cart
+            <i class="fa fa-shopping-cart"></i> Shopping Cart 
         </a>
     <% } %>
 </li>
 <li class="borderLeft">
     <% if(path === '/learn/ctf/profile'){ %>
         <a style="color:white" href='/learn/ctf/profile'>
-            My Profile
+            <i class="fa fa-user"></i> My Profile 
         </a>
     <% } else{%>
         <a href='/learn/ctf/profile'>
-            My Profile
+            <i class="fa fa-user"></i> My Profile
         </a>
     <% } %>
 </li>
 <li class="borderLeft borderRight">
     <% if(path === '/learn/ctf/trash'){ %>
         <a style="color:white" href='/learn/ctf/trash'>
-            Trash
+            <i class="fa fa-trash"></i> Trash
         </a>
     <% } else{%>
         <a href='/learn/ctf/trash'>
-            Trash
+            <i class="fa fa-trash"></i> Trash
         </a>
     <% } %>
 </li>
