--- a/views/common/secureHeader.ejs
+++ b/views/common/secureHeader.ejs
@@ -9,7 +9,7 @@
         </a>
     <% } %>
 </li>
-<li class="borderLeft">
+<!-- <li class="borderLeft">
     <% if(type && type === 'ctf'){ %>
         <a style="color:white" href='/learn/ctf/home'>
             CTF
@@ -19,7 +19,7 @@
             CTF
         </a>
     <% } %>
-</li>
+</li> -->
 <li class="borderLeft borderRight">
     <% if(type && type === 'crypto'){ %>
         <a style="color:white" href='/learn/cryptography/vulnerability/info'>
