--- a/views/ctf/sidebar.ejs
+++ b/views/ctf/sidebar.ejs
@@ -1,7 +1,6 @@
 <div class='col-md-3'>
         <div class='list-group sidebar'>
-            <h4 class="primaryText pt20">Capture The Flag</h4>
-            <div class="plr20">
+            <div class="plr20 pt20">
                 <% for (var vulnKey in vulnerabilities) { %>
                     <% currentPath = "/learn/ctf/"+vulnKey %>
                     <% if(path === currentPath){ %>
