rename routes and delete CTF on secureyourweb

--- a/views/common/attackHeader.ejs
+++ b/views/common/attackHeader.ejs
@@ -1,43 +1,43 @@
 <li class="borderLeft">
     <% if(needSidebar){ %>
-        <a style="color:white" href='/learn/ctf/home'>
+        <a style="color:white" href='/ctf/home'>
             <i class="fa fa-dashboard"></i> Dashboard 
         </a>
     <% } else{%>
-        <a href='/learn/ctf/home'>
+        <a href='/ctf/home'>
             <i class="fa fa-dashboard"></i> Dashboard
         </a>
     <% } %>
 </li>
 <li class="borderLeft">
-    <% if(path === '/learn/ctf/shop'){ %>
-        <a style="color:white" href='/learn/ctf/shop'>
+    <% if(path === '/ctf/shop'){ %>
+        <a style="color:white" href='/ctf/shop'>
             <i class="fa fa-shopping-cart"></i> Shopping Cart
         </a>
     <% } else{%>
-        <a href='/learn/ctf/shop'>
+        <a href='/ctf/shop'>
             <i class="fa fa-shopping-cart"></i> Shopping Cart 
         </a>
     <% } %>
 </li>
 <li class="borderLeft">
-    <% if(path === '/learn/ctf/profile'){ %>
-        <a style="color:white" href='/learn/ctf/profile'>
+    <% if(path === '/ctf/profile'){ %>
+        <a style="color:white" href='/ctf/profile'>
             <i class="fa fa-user"></i> My Profile 
         </a>
     <% } else{%>
-        <a href='/learn/ctf/profile'>
+        <a href='/ctf/profile'>
             <i class="fa fa-user"></i> My Profile
         </a>
     <% } %>
 </li>
 <li class="borderLeft borderRight">
-    <% if(path === '/learn/ctf/trash'){ %>
-        <a style="color:white" href='/learn/ctf/trash'>
+    <% if(path === '/ctf/trash'){ %>
+        <a style="color:white" href='/ctf/trash'>
             <i class="fa fa-trash"></i> Trash
         </a>
     <% } else{%>
-        <a href='/learn/ctf/trash'>
+        <a href='/ctf/trash'>
             <i class="fa fa-trash"></i> Trash
         </a>
     <% } %>
