--- a/views/ctf/layout.ejs
+++ b/views/ctf/layout.ejs
@@ -4,7 +4,7 @@
     <% include ../common/head %>
 </head>
 <body>
-    <% needSidebar = (path === '/learn/ctf/home' || path === '/learn/ctf/create-new-document' || path === '/learn/ctf/sign-document') %>
+    <% needSidebar = (path === '/ctf/home' || path === '/ctf/create-new-document' || path === '/ctf/sign-document') %>
     <% include ../common/header %>
     <div class='container' style='min-height: 450px;margin-left: 0px; padding-left: 0px;'>
         <div class='row'>
