--- a/views/common/attackHeader.ejs
+++ b/views/common/attackHeader.ejs
@@ -1,11 +1,11 @@
 <li class="borderLeft">
     <% if(needSidebar){ %>
         <a style="color:white" href='/ctf/home'>
-            <i class="fa fa-dashboard"></i> Dashboard 
+            <i class="fa fa-home"></i> Home 
         </a>
     <% } else{%>
         <a href='/ctf/home'>
-            <i class="fa fa-dashboard"></i> Dashboard
+            <i class="fa fa-home"></i> Home
         </a>
     <% } %>
 </li>
