--- a/views/app/useredit.ejs
+++ b/views/app/useredit.ejs
@@ -4,22 +4,13 @@
     <% include ../common/head %>
 </head>
 <body>
-<% include ../common/header %>
 <div class='container' style='min-height: 450px'><div class='row'><div class='col-md-12'>
 
     <div class='row'>
         <div class='col-md-6 col-md-offset-3'>
             <h2> User Profile </h2>
 
-            <% if (messages.success) { %>
-                <div class="alert alert-success"><%=messages.success%></div>
-            <% } else if (messages.danger) { %>
-                <div class="alert alert-danger"><%= messages.danger %></div>
-            <% } else if (messages.warning) {%>
-                <div class="alert alert-warning"><%= messages.warning %></div>
-            <% } else if (messages.info) {%>
-                <div class="alert alert-info"><%= messages.info %></div>
-            <% } %>
+            <% include ../common/infoBoxes %>
 
             <form id="editUser" name="editUser" action="/app/useredit" method="post">
                 <fieldset>
