--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -1,10 +1,16 @@
-<title>Attack My Web</title>
+<!-- <% if(true){ %> -->
+<title>Attack My Admin</title>
+<link rel="icon" type="image/vnd.microsoft.icon" href="/assets/img/favicon.ico">
+<!-- <% } else{%>
+    <title>Secure Your Web</title>
+    <link rel="icon" type="image/png" href="/assets/img/favicon.png"> 
+<% } %> -->
+
 <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<!-- <link rel="icon" type="image/vnd.microsoft.icon" href="/assets/img/favicon.ico"> -->
-<link rel="icon" type="image/png" href="/assets/img/favicon.png"> 
+
 <script src='/assets/js/jquery-3.2.1.min.js'></script>
 <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/assets/js/bootstrapValidator.js"></script>
