--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,14 +1,14 @@
 <nav class="primaryColor navbar navbar-inverse navbar-fixed-top" style="border:0px">
   <div class="container" style="margin-left: 0px;padding-left: 40px;">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
         <% if(type && type === 'ctf'){ %>
-            <a class="navbar-brand logo" style="color: coral;" href="/ctf/home">Attack My Web</a>
+            <a class="navbar-brand logo" style="color: coral;" href="/ctf/home">Attack My Admin</a>
         <% } else{%>
             <a class="navbar-brand logo" style="color: coral;" href="/">Secure Your Web</a>
         <% } %>
