--- a/views/ctf/layout.ejs
+++ b/views/ctf/layout.ejs
@@ -4,18 +4,26 @@
     <% include ../common/head %>
 </head>
 <body>
-    <% needSidebar = (path === '/ctf/home' || path === '/ctf/create-new-document' || path === '/ctf/sign-document') %>
+    <% needSidebar = (path === '/ctf/home' || path === '/ctf/create-new-document' || path === '/ctf/sign-document' || path === '/ctf/upload-document' || path === '/ctf/edit-document') %>
     <% include ../common/header %>
     <div class='container' style='min-height: 450px;margin-left: 0px; padding-left: 0px;'>
         <div class='row'>
             <div class='col-md-12'>
                 <div class='row'>
-                    <% include sidebar %>
-                    <div class='col-md-9' style='padding: 40px'>
-                        <h3><%=vuln_title%></h3>
-                        <br />
-                        <%- include(vuln_description) %>
-                    </div>
+                    <% if(needSidebar){ %>
+                        <% include sidebar %>
+                        <div class='col-md-9' style='padding: 40px'>
+                            <h3><%=vuln_title%></h3>
+                            <br />
+                            <%- include(vuln_description) %>
+                        </div>
+                    <% } else {%> 
+                        <div class='col-md-12' style='padding: 40px'>
+                            <h3><%=vuln_title%></h3>
+                            <br />
+                            <%- include(vuln_description) %>
+                        </div>
+                    <% }%> 
                 </div>
             </div>
         </div>
