--- a/views/ctf/upload-document/description.ejs
+++ b/views/ctf/upload-document/description.ejs
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <% include ../common/head %>
-</head>
-<body>
+
     <div class='container' style='min-height: 450px'><div class='row'><div class='col-md-12'>
 
         <h2>
             <i class='fa fa-upload'></i> Bulk Import Products
         </h2>
 
-        <% include ../common/infoBoxes %>
+        <% include ../../common/infoBoxes %>
 
         <div>
             <h3>Upload products</h3>
-            <form encType="multipart/form-data" method="post" action="/app/bulkproducts<% if(legacy){%>legacy<%}%>">
+            <form encType="multipart/form-data" method="post" action="/app/bulkproducts<% if(output.legacy){%>output.legacy<%}%>">
                 <div class="input-group mb-3">
                     <div class="products-file">
-                        <input type="file" name="products" class="file-input" id="inputfile" <% if(!legacy){ %> accept=".xml" <% } %>>
+                        <input type="file" name="products" class="file-input" id="inputfile" <% if(!output.legacy){ %> accept=".xml" <% } %>>
                         <br>
                         <input class="button" type="submit" name="submit" value="Upload">
                     </div>
@@ -26,8 +21,8 @@
         </div>
 
         <div><br>
-            <!-- Handle legacy endpoit /app/bulkproducts?legacy=true -->
-            <% if (!legacy) { %>
+            <!-- Handle output.legacy endpoit /app/bulkproducts?output.legacy=true -->
+            <% if (!output.legacy) { %>
             <h3>Sample XML</h3>
 <pre><xmp>
 <products>
@@ -50,5 +45,4 @@
             <%} %>
         </div>
         </div></div></div>
-</body>
-</html>
+
