--- a/views/forgotpw.ejs
+++ b/views/forgotpw.ejs
@@ -13,15 +13,7 @@
 	                <h2>RESET PASSWORD</h2>
 	            </div>
 
-				<% if (messages.success) { %>
-					<div class="alert alert-success"><%=messages.success%></div>
-				<% } else if (messages.danger) { %>
-					<div class="alert alert-danger"><%= messages.danger %></div>
-				<% } else if (messages.warning) {%> 
-					<div class="alert alert-warning"><%= messages.warning %></div>
-				<% } else if (messages.info) {%> 
-					<div class="alert alert-info"><%= messages.info %></div>
-				<% } %> 
+				<% include common/infoBoxes %>
 
 	            <div class='page-body'>
 					<form id="resetPasswordStart" name="resetPasswordStart" action="/forgotpw" method="post">
