--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,17 +8,9 @@
         <div class='row'>
             <div class='col-md-6 col-md-offset-3'>
                 <div class='page-header loginTitle'>
-                    <h2>Attack My Web</h2>
+                    <h2>Attack My Admin</h2>
                 </div>
-				<% if (messages.success) { %>
-					<div class="alert alert-success"><%=messages.success%></div>
-				<% } else if (messages.danger) { %>
-					<div class="alert alert-danger"><%= messages.danger %></div>
-				<% } else if (messages.warning) {%> 
-					<div class="alert alert-warning"><%= messages.warning %></div>
-				<% } else if (messages.info) {%> 
-					<div class="alert alert-info"><%= messages.info %></div>
-				<% } %>
+				<% include common/infoBoxes %>
                 <div class='page-body'>
 				<form id="login" name="login" action="/login" method="post">
 				    <fieldset>
