--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,15 +11,7 @@
                     <h2>REGISTER</h2>
                 </div>
 
-                <% if (messages.success) { %>
-                    <div class="alert alert-success"><%=messages.success%></div>
-                <% } else if (messages.danger) { %>
-                    <div class="alert alert-danger"><%= messages.danger %></div>
-                <% } else if (messages.warning) {%> 
-                    <div class="alert alert-warning"><%= messages.warning %></div>
-                <% } else if (messages.info) {%> 
-                    <div class="alert alert-info"><%= messages.info %></div>
-                <% } %>
+                <% include common/infoBoxes %>
 
                 <div class='page-body'>
                     <form id="register" name="register" action="/register" method="post">
