Renaming to SuperSecretDocs and changes the naming of the files to index.ejs

--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
         </button>
         <% if(type && type === 'ctf'){ %>
-            <a class="navbar-brand logo" style="color: coral;" href="/ctf/home">Attack My Admin</a>
+            <a class="navbar-brand logo" style="color: coral;" href="/ctf/home">Super Secret Docs</a>
         <% } else{%>
             <a class="navbar-brand logo" style="color: coral;" href="/">Secure Your Web</a>
         <% } %>
