--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
         <div class='row'>
             <div class='col-md-6 col-md-offset-3'>
                 <div class='page-header loginTitle'>
-                    <h2>Attack My Admin</h2>
+                    <h2>Super Secret Docs</h2>
                 </div>
 				<% include common/infoBoxes %>
                 <div class='page-body'>
