--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -1,5 +1,5 @@
 <!-- <% if(true){ %> -->
-<title>Attack My Admin</title>
+<title>Super Secret Docs</title>
 <link rel="icon" type="image/vnd.microsoft.icon" href="/assets/img/favicon.ico">
 <!-- <% } else{%>
     <title>Secure Your Web</title>
