--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -12,8 +12,8 @@
         <div class='row'>            
             <div class='col-md-12' style='padding: 40px'>
                 <% include common/infoBoxes %>               
-                <h3>Welcome to <strong>Attack My Admin</strong></h3>
-                <p><i>Attack My Admin</i> implements a set of intentionally vulnerable functions in NodeJS for learning purpose.
+                <h3>Welcome to <strong>Super Secret Docs</strong></h3>
+                <p><i>Super Secret Docs</i> implements a set of intentionally vulnerable functions in NodeJS for learning purpose.
                 Start by selecting which of the following subjects you want to practise:</p>
                 <br />
                 <br />
